avoid distort thumbnail

--- a/src/github.com/getlantern/lantern-ui/app/_css/news.css
+++ b/src/github.com/getlantern/lantern-ui/app/_css/news.css
@@ -128,6 +128,9 @@
   width: 145px;
   height: 88px;
   margin: 17px 21px;
+}
+
+#news .feed-thumbnail img {
   border: 1px solid #000000;
 }
 
